# html-generator

./: CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  build.rs  codecov.yml  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  src-files.js
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: audit.yml  check.yml  ci.yml  coverage.yml  document.yml  lint.yml  release.yml
benches/: competitors.rs  html_benchmark.rs
crates/serde_yml/src/: de.rs  error.rs  lib.rs  number.rs  ser.rs
crates/serde_yml/src/value/: mod.rs  tagged.rs
crates/serde_yml/tests/: integration.rs
crates/yaml_safe/: Cargo.toml
crates/yaml_safe/src/: de.rs  error.rs  lib.rs  mapping.rs  number.rs  ser.rs  with.rs
crates/yaml_safe/src/value/: mod.rs  tagged.rs
crates/yaml_safe/src/with/: singleton_map.rs  singleton_map_optional.rs  singleton_map_recursive.rs
examples/: accessibility.rs  accessibility_example.rs  aria_elements_example.rs  async.rs  basic_example.rs  comprehensive_example.rs  config.rs  custom_config_example.rs  custom_syntax.rs  emojis.rs  error_example.rs  errors.rs  frontmatter.rs  generator_example.rs  headers.rs  hello.rs  lib_example.rs  math_and_diagrams.rs  minify.rs  performance_example.rs  pipeline.rs  seo.rs  seo_example.rs  style_example.rs  support.rs  toc.rs  utils_example.rs
examples/basic/: custom_containers.txt  large_markdown.txt
html_generator/: all.html  enum.ConfigError.html  enum.HtmlError.html  enum.OutputDestination.html  fn.markdown_file_to_html.html  fn.markdown_to_html.html  fn.validate_language_code.html  index.html  sidebar-items.js  struct.HtmlConfig.html  struct.HtmlConfigBuilder.html  struct.MarkdownConfig.html  type.Result.html
html_generator/accessibility/: enum.AccessibilityError.html  enum.Error.html  enum.IssueType.html  enum.WcagLevel.html  fn.add_aria_attributes.html  fn.validate_wcag.html  index.html  sidebar-items.js  struct.AccessibilityConfig.html  struct.AccessibilityReport.html  struct.Issue.html  type.Result.html
html_generator/accessibility/constants/: constant.DEFAULT_BUTTON_ROLE.html  constant.DEFAULT_FORM_ROLE.html  constant.DEFAULT_INPUT_ROLE.html  constant.DEFAULT_NAV_ROLE.html  constant.MAX_HTML_SIZE.html  index.html  sidebar-items.js
html_generator/accessibility/utils/: index.html
html_generator/constants/: constant.DEFAULT_LANGUAGE.html  constant.DEFAULT_MAX_INPUT_SIZE.html  constant.DEFAULT_SYNTAX_THEME.html  constant.LANGUAGE_CODE_PATTERN.html  constant.MAX_PATH_LENGTH.html  constant.MIN_INPUT_SIZE.html  index.html  sidebar-items.js
html_generator/emojis/: fn.load_emoji_sequences.html  index.html  sidebar-items.js
html_generator/error/: enum.ErrorKind.html  enum.HtmlError.html  enum.SeoErrorKind.html  index.html  sidebar-items.js  type.Result.html
html_generator/generator/: fn.generate_html.html  fn.markdown_to_html_with_extensions.html  fn.process_markdown_inline.html  index.html  sidebar-items.js
html_generator/performance/: constant.MAX_FILE_SIZE.html  fn.async_generate_html.html  fn.generate_html.html  fn.minify_html.html  index.html  sidebar-items.js
html_generator/seo/: fn.escape_html.html  fn.generate_meta_tags.html  fn.generate_structured_data.html  index.html  sidebar-items.js  struct.MetaTagsBuilder.html  struct.StructuredDataConfig.html
html_generator/utils/: fn.extract_front_matter.html  fn.format_header_with_id_class.html  fn.generate_table_of_contents.html  fn.is_valid_aria_role.html  fn.is_valid_language_code.html  index.html  sidebar-items.js
search.desc/html_generator/: html_generator-desc-0-.js
src/: accessibility.rs  elements.rs  emojis.rs  error.rs  generator.rs  lib.rs  math.rs  performance.rs  seo.rs  utils.rs  wasm.rs
src/html_generator/: accessibility.rs.html  emojis.rs.html  error.rs.html  generator.rs.html  lib.rs.html  performance.rs.html  seo.rs.html  utils.rs.html
src/yaml/: de.rs  error.rs  mapping.rs  mod.rs  number.rs  ser.rs  with.rs
src/yaml/value/: mod.rs  tagged.rs
src/yaml/with/: singleton_map.rs  singleton_map_optional.rs  singleton_map_recursive.rs
tests/: fixture_tests.rs  integration_tests.rs  unit_coverage.rs  wasm_smoke.rs
tests/fixtures/: chinese.txt  code_syntax_highlighting.txt  custom_syntax_blocks.txt  deep_nesting.txt  duplicate_elements.txt  edge_cases.txt  emoji_content.txt  escaped_characters.txt  frontmatter_edge_cases.txt  full_document_mode.txt  hindi.txt  huge_table.txt  korean.txt  real_world_blog.txt  unicode_edge_cases.txt  xss_vectors.txt
tools/: check_dependencies.sh
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/core/result/: enum.Result.js
