# -----------------------------------------------------------------------------
# HTML Generator - A Rust-based HTML generation and optimization library.
# -----------------------------------------------------------------------------

[package]
name = "html-generator"
version = "0.0.5"
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
description = """
A robust Rust library designed for transforming Markdown into SEO-optimized, accessible HTML. Featuring front matter extraction, custom header processing, table of contents generation, and performance optimization for web projects of any scale.
"""
homepage = "https://html-generator.co/"
documentation = "https://doc.html-generator.co/html_generator/"
repository = "https://github.com/sebastienrousseau/html-generator"
readme = "README.md"
build = "build.rs"
autoexamples = false

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------
categories = [
    "web-programming",
    "command-line-utilities",
    "data-structures",
    "parsing",
    "development-tools"
]

# Keywords for easier discoverability on Crates.io.
keywords = ["html", "web_development", "seo", "html-generator"]

# Excluding unnecessary files from the package
exclude = [
    "/.git/*",                          # Exclude version control files
    "/.github/*",                       # Exclude GitHub workflows
    "/.gitignore",                      # Ignore Git ignore file
    "/.vscode/*"                        # Ignore VSCode settings
]

# Including necessary files in the package
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/data/**",
    "/examples/**",
    "/README.md",
    "/src/**",
]

# -----------------------------------------------------------------------------
# Library Information
# -----------------------------------------------------------------------------

# The library file that contains the main logic.
#
# `cdylib` is required so `wasm-pack build` produces a usable
# `html_generator_bg.wasm` + `html_generator.js` JS-importable
# bundle. `rlib` is kept so this crate can still be a regular Rust
# dependency. Native builds use `rlib` only — the `cdylib` artifact
# is only emitted when targeting `wasm32-*`.
[lib]
name = "html_generator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
# Dependencies required for building and running the project.
ammonia = "4"
indexmap = "2"
log = "0.4"
minify-html = "0.18"
once_cell = "1.21.4"
pulldown-latex = { version = "0.7", optional = true }
regex = "1.12.3"
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"], optional = true }
toml = "1.1"
# WASM bindings (gated behind the `wasm` feature). `js-sys` is
# pulled in only on `wasm32` targets where it is needed for any
# `getrandom`/timing fallbacks downstream crates require.
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Native targets get the full `mdx-gen` pipeline (custom blocks,
# enhanced tables, optional syntax highlighting via `syntect`).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mdx-gen = "0.0.2"

# WASM targets: bypass `mdx-gen` and use `comrak` directly. `mdx-gen`
# pulls in `tokio` (which pulls in `mio`) unconditionally, neither
# of which compile to `wasm32-unknown-unknown`. The trade-off on
# WASM is loss of `mdx-gen`'s `:::class` blocks, image-class syntax,
# and `syntect` syntax highlighting; the core CommonMark/GFM
# pipeline is identical because `mdx-gen` itself wraps `comrak`.
# `getrandom` needs `wasm_js` so transitive uses compile.
[target.'cfg(target_arch = "wasm32")'.dependencies]
comrak = { version = "0.50", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9.5"

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------

[dev-dependencies]
# Dependencies required for testing and development. `tempfile` is
# referenced from `#[cfg(test)]` modules in `src/`, so it has to be
# available for the wasm32 test build too — fortunately it is
# wasm-friendly.
test-case = "3.3.1"
tempfile = "3.27.0"

# Native-only dev-deps: `criterion` pulls in `rayon`, which doesn't
# compile to `wasm32-unknown-unknown` (the `wasm-pack test --node`
# CI gate would fail on its `cargo build --tests` step otherwise).
# The competitor-bench engines are likewise native-only.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8"
# Comparative-bench dependencies — competitor markdown engines
# benchmarked side-by-side in `benches/competitors.rs`. Pinned to
# major versions stable on crates.io as of v0.0.5.
comrak = "0.50"
pulldown-cmark = "0.13"

# WASM headless test harness — only used when the `wasm` feature
# is enabled and the target is `wasm32`.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"


# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------

[features]
# Features that can be enabled or disabled.
default = ["math"]
async = ["dep:tokio"]
# Server-side LaTeX → MathML rendering for `$..$` and `$$..$$`
# spans. Pulled in by default because pure-Rust + zero-runtime-JS;
# disable with `--no-default-features` if you want a smaller binary
# and will render math client-side instead.
math = ["dep:pulldown-latex"]
# WebAssembly bindings via `wasm-bindgen`. Exposes
# `generate_html_wasm` for use from JavaScript (Workers, browsers,
# Node). Build with `cargo build --target wasm32-unknown-unknown
# --features wasm` or `wasm-pack build`. Time/file-IO paths are
# gated out for `wasm32` targets — only the in-memory rendering
# pipeline is exposed.
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

# -----------------------------------------------------------------------------
# Examples -  cargo run --example <name>
# -----------------------------------------------------------------------------

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"

[[example]]
name = "frontmatter"
path = "examples/frontmatter.rs"

[[example]]
name = "accessibility"
path = "examples/accessibility.rs"

[[example]]
name = "seo"
path = "examples/seo.rs"

[[example]]
name = "toc"
path = "examples/toc.rs"

[[example]]
name = "minify"
path = "examples/minify.rs"

[[example]]
name = "errors"
path = "examples/errors.rs"

[[example]]
name = "config"
path = "examples/config.rs"

[[example]]
name = "headers"
path = "examples/headers.rs"

[[example]]
name = "async"
path = "examples/async.rs"
required-features = ["async"]

[[example]]
name = "custom_syntax"
path = "examples/custom_syntax.rs"

[[example]]
name = "emojis"
path = "examples/emojis.rs"

[[example]]
name = "math_and_diagrams"
path = "examples/math_and_diagrams.rs"

# -----------------------------------------------------------------------------
# Criterion Benchmark
# -----------------------------------------------------------------------------
[[bench]]                         # Benchmarking configuration.
name = "html_benchmark"           # Name of the benchmark.
harness = false                   # Disable the default benchmark harness.

# Competitor comparison: same realistic 8 KB blog payload run through
# html-generator and three popular CommonMark crates so the README's
# performance section can cite measured numbers, not estimates.
[[bench]]
name = "competitors"
harness = false

# -----------------------------------------------------------------------------
# Documentation Configuration
# -----------------------------------------------------------------------------
[package.metadata.docs.rs]
# Settings for building and hosting documentation on docs.rs.
all-features = true                         # Build documentation with all features enabled
rustdoc-args = ["--cfg", "docsrs"]          # Arguments passed to `rustdoc` when building the documentation
targets = ["x86_64-unknown-linux-gnu"]      # Default target platform for the docs

# wasm-pack post-processing for `wasm-pack build --release ...`. The
# `--enable-bulk-memory` and `--enable-nontrapping-float-to-int`
# flags are required because current rustc emits those wasm
# instructions and the wasm-opt bundled with wasm-pack is older than
# the spec extensions needed to validate them. Without this metadata
# the bulk-memory `memory.copy` instructions that the compiler
# inlines fail wasm-opt validation. `-Os` keeps the size focus
# (typically shrinks the bindgen-processed `.wasm` 3–5×).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

# -----------------------------------------------------------------------------
# Linting Configuration
# -----------------------------------------------------------------------------
[lints.rust]
# Linting rules for the project.

## Warnings
missing_copy_implementations = "warn"       # Warn if types can implement `Copy` but don’t
missing_docs = "deny"                       # Deny missing docs on public items — every item ships with `# Examples`.
unstable_features = "warn"                  # Warn on the usage of unstable features
unused_extern_crates = "warn"               # Warn about unused external crates
unused_results = "warn"                     # Warn if a result type is unused (e.g., errors ignored)

## Allowances
bare_trait_objects = "allow"                # Allow bare trait objects (e.g., `Box<dyn Trait>`)
elided_lifetimes_in_paths = "allow"         # Allow lifetimes to be elided in paths
non_camel_case_types = "allow"              # Allow non-camel-case types
non_upper_case_globals = "allow"            # Allow non-uppercase global variables
trivial_bounds = "allow"                    # Allow trivial bounds in trait definitions
unsafe_code = "forbid"                      # Forbid the usage of unsafe code blocks

## Forbidden
missing_debug_implementations = "forbid"    # Forbid missing `Debug` implementations
non_ascii_idents = "forbid"                 # Forbid non-ASCII identifiers
unreachable_pub = "forbid"                  # Forbid unreachable `pub` items

## Denials
dead_code = "deny"                          # Deny unused, dead code in the project
deprecated_in_future = "deny"               # Deny code that will be deprecated in the future
ellipsis_inclusive_range_patterns = "deny"  # Deny usage of inclusive ranges in match patterns (`...`)
explicit_outlives_requirements = "deny"     # Deny unnecessary lifetime outlives requirements
future_incompatible = { level = "deny", priority = -1 } # Handle future compatibility issues
keyword_idents = { level = "deny", priority = -1 }      # Deny usage of keywords as identifiers
macro_use_extern_crate = "deny"             # Deny macro use of `extern crate`
meta_variable_misuse = "deny"               # Deny misuse of meta variables in macros
noop_method_call = "deny"                   # Deny method calls that have no effect
rust_2018_idioms = { level = "deny", priority = -1 }    # Enforce Rust 2018 idioms
rust_2021_compatibility = { level = "deny", priority = -1 } # Enforce Rust 2021 compatibility
single_use_lifetimes = "deny"               # Deny lifetimes that are used only once
trivial_casts = "deny"                      # Deny trivial casts (e.g., `as` when unnecessary)
trivial_numeric_casts = "deny"              # Deny trivial numeric casts (e.g., `i32` to `i64`)
unused = { level = "deny", priority = -1 }  # Deny unused code, variables, etc.
unused_features = "deny"                    # Deny unused features
unused_import_braces = "deny"               # Deny unnecessary braces around imports
unused_labels = "deny"                      # Deny unused labels in loops
unused_lifetimes = "deny"                   # Deny unused lifetimes
unused_macro_rules = "deny"                 # Deny unused macros
unused_qualifications = "deny"              # Deny unnecessary type qualifications
variant_size_differences = "deny"           # Deny enum variants with significant size differences

# -----------------------------------------------------------------------------
# Clippy Configuration
# -----------------------------------------------------------------------------
[package.metadata.clippy]
# Clippy lint configuration for enhanced code analysis.
warn-lints = [
    "clippy::all",                           # Enable all common Clippy lints
    "clippy::pedantic",                      # Enable pedantic lints for stricter checking
    "clippy::cargo",                         # Enable lints specific to cargo
    "clippy::nursery",                       # Enable experimental lints from Clippy’s nursery
    "clippy::complexity",                    # Warn on code complexity and suggest improvements
    "clippy::correctness",                   # Ensure code correctness, flagging potential issues
    "clippy::perf",                          # Lints that catch performance issues
    "clippy::style",                         # Suggest stylistic improvements
    "clippy::suspicious",                    # Detect suspicious code patterns
    "clippy::module_name_repetitions",       # Avoid repeating module names in the crate name
]

# Customize Clippy to allow certain less critical lints.
allow-lints = [
    "clippy::module_inception",              # Allow modules with the same name as their parents
    "clippy::too_many_arguments",            # Allow functions with more than 7 arguments if justified
    "clippy::missing_docs_in_private_items", # Skip requiring documentation for private items
]

# Enforce specific warnings and errors more strictly.
deny-lints = [
    "clippy::unwrap_used",                   # Deny the use of unwrap to ensure error handling
    "clippy::expect_used",                   # Deny the use of expect to avoid improper error handling
]

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------
[profile.dev]
# Development profile configuration for fast builds and debugging.
codegen-units = 256                         # Increase codegen units for faster compilation
debug = true                                # Enable debugging symbols
debug-assertions = true                     # Enable debug assertions
incremental = true                          # Enable incremental compilation
lto = false                                 # Disable link-time optimization for development
opt-level = 0                               # No optimizations in development
overflow-checks = true                      # Enable overflow checks for arithmetic operations
panic = 'unwind'                            # Enable unwinding for panics (useful in development)
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in development builds

[profile.release]
# Release profile configuration for optimized builds.
codegen-units = 1                           # Reduce codegen units for better performance
debug = false                               # Disable debug symbols in release builds
debug-assertions = false                    # Disable debug assertions
incremental = false                         # Disable incremental compilation for optimal binary size
lto = true                                  # Enable link-time optimization for smaller and faster binaries
opt-level = "z"                             # Optimize for binary size
overflow-checks = false                     # Disable overflow checks for performance
panic = "abort"                             # Use abort on panic for minimal overhead
rpath = false                               # Disable rpath generation
strip = "symbols"                           # Strip symbols for smaller binary size

[profile.test]
# Test profile configuration for debugging and development.
codegen-units = 256                         # Increase codegen units for faster test builds
debug = true                                # Enable debugging symbols for test builds
debug-assertions = true                     # Enable debug assertions for tests
incremental = true                          # Enable incremental compilation for tests
lto = false                                 # Disable link-time optimization during testing
opt-level = 0                               # No optimizations in test builds
overflow-checks = true                      # Enable overflow checks for tests
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in test builds

# -----------------------------------------------------------------------------
# Bench Profile — overrides release defaults for criterion measurements.
# -----------------------------------------------------------------------------
# Criterion inherits `profile.release` by default; `opt-level = "z"` there
# optimises for binary size at the cost of throughput. Bench numbers must
# reflect realistic release performance, so pin the speed-focused knobs
# here.
[profile.bench]
# `panic` is intentionally omitted: cargo ignores `panic` for the bench
# profile because benchmarks rely on unwinding for reporting.
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
strip = "symbols"
