# Vendored copy of `yaml_safe`, mirrored from
#   /Users/seb/Code/Public/Rust/yaml_safe (yaml_safe@0.1.0)
# at the time of this commit. Kept publish = false; html-generator
# uses it as a path dependency until yaml_safe ships to crates.io,
# at which point the path dep here becomes `yaml_safe = "0.1"`.
[package]
name = "yaml_safe"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust YAML serde implementation (no unsafe, no libyml) — vendored"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
indexmap = "2"

[lints.rust]
unsafe_code = "forbid"
